--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,7 @@ fabric.properties
 # Azure Toolkit for IntelliJ plugin
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
+.idea/workspace.xml
 
 ### Linux ###
 *~
